<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="DUT_Process" Id="{aef8dbe9-ab86-4dc4-bb08-f23f54e8215c}">
    <Declaration><![CDATA[TYPE DUT_Process :
STRUCT
	xProcessNone				:BOOL;	(*module Process need bypass*)
	xProcessNotStarted     		:BOOL;	(*Module process not start*)
	xProcessStarted          	:BOOL;	(*Module process start*)
	xProcessCompleted     		:BOOL;	(*Module process completed*)
	xQDataCompleted				:BOOL; (*Module data send completed*)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>