<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Thermostat" Id="{7e9cee3b-9afe-471d-9a4e-667f9a925d19}">
    <Declaration><![CDATA[TYPE ST_Thermostat :
STRUCT
	tTON_Delay	:TIME;//热熔时间
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>